<resources>
    <string name="app_name" translatable="false">FerreFit</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset password</string>
    <string name="not_registered">Not yet registered? ¡Sing Up!</string>
    <string name="send_email">Send E-mail</string>
    <string name="back_button">Back</string>
    <string name="sing_up">Sing Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_user">Already an user? Login!</string>
    <string name="app_logo">App Logo</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="app_theme">App Theme</string>
    <string name="help_support">Help and Support</string>
    <string name="help_button">Get Help</string>
    <string name="delete_acc_button">Delete Account</string>
    <string name="modes_title" translatable="false">Title</string>
    <string name="modes_description" translatable="false">Description</string>
    <string name="modes_button">Modes button</string>
    <string name="home_menu">Home</string>
    <string name="profile_menu">Profile</string>
    <string name="settings_menu">Settings</string>
    <string name="log_out_menu">Log-out</string>
    <string name="notification_1">Notifications On!</string>
    <string name="notification_2">Notifications are now enabled</string>
    <string name="training_plan">Training Plan</string>
    <string name="training_plan_desc">Access structured plans by level (beginner, intermediate, advanced) or goals (weight loss, muscle gain, maintenance)</string>
    <string name="progress_tracking">Progress Tracking</string>
    <string name="progress_tracking_desc">Section to log and view progress in weight, reps, body measurements, or personal milestones.</string>
    <string name="fitness_challenge">Fitness Challenge</string>
    <string name="fitness_challenge_desc">Weekly or monthly challenges to stay motivated. Are you ready?</string>
    <string name="equipment_based_routine">Equipment-Based Routines</string>
    <string name="equipment_based_routine_desc">Specific workouts to do at home, with dumbbells, resistance bands, or at the gym.</string>
    <string name="stretching_movility">Stretching and Mobility</string>
    <string name="stretching_movility_desc">Routines to improve flexibility, prevent injuries, or assist with recovery.</string>
    <string name="warm_up_cool_down">Warm-Up and Cool-Down</string>
    <string name="warm_up_cool_down_desc">Quick guides to prepare the body before exercise or relax it afterward.</string>
    <string name="nutrition_recipes">Nutrition and Recipes</string>
    <string name="nutrition_recipes_desc">Nutritional tips and healthy recipes to complement your training.</string>
    <string name="meditation_mindfulness">Meditation and Mindfulness</string>
    <string name="meditation_mindfulness_desc">Options to care for your mind with relaxation sessions or guided meditation.</string>
    <string name="express_workouts">Express Workouts</string>
    <string name="express_workouts_desc">Short routines for those with limited time.</string>
    <string name="community_groups">Community and Groups</string>
    <string name="community_groups_desc">Interact with other users, share your achievements, and stay motivated together!</string>
    <string name="goal_setting">Goal Setting</string>
    <string name="goal_setting_desc">Customize short- and long-term goals.</string>
    <string name="workout_statistics">Workout Statistics</string>
    <string name="workout_statistics_desc">Detailed summary of training time, calories burned, and sessions completed.</string>
    <string name="explore_workouts">Explore Workouts</string>
    <string name="explore_workouts_desc">Discover new routines by type (cardio, strength, yoga, Pilates).</string>
    <string name="support_tips">Support and Tips</string>
    <string name="support_tips_desc">FAQs, exercise tutorials, or access to virtual coaches.</string>
    <string name="logout_dialog_text">Are you sure you want to log out?</string>
    <string name="logout_dialog_confirm">Confirm</string>
    <string name="logout_dialog_cancel">Cancel</string>
    <string name="incorrect_email_password">Incorrect e-mail/password</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="change_email">Change E-mail</string>
    <string name="current_email">Current e-mail</string>
    <string name="new_email">New e-mail</string>
    <string name="confirm_new_email">Confirm e-mail</string>
    <string name="new_email_cancel">Cancel</string>
    <string name="new_email_confirm">Confirm</string>
    <string name="current_password">Password</string>
    <string name="profile_email">E-mail: %1$s</string>
    <string name="profile_date">Registration date: %1$s</string>
    <string name="unknow_profile_email">E-mail: Unregistered</string>
    <string name="unknow_profile_date">Registration date: Unknow</string>
    <string name="reset_pass_email">Please enter your email</string>
    <string name="password_dissmatch">Passwords do not match</string>
    <string name="remember_checkbox">Remember me</string>
    <string name="confirm_delete_acc">I agree that my account will be deleted and I will not be able to use the same email for 30 days.</string>
    <string name="change_password">Change Password</string>
    <string name="password_profile">Password: *******</string>
    <string name="in_development">In development</string>
    <string name="password_updated_successfully">Password updated!</string>
    <string name="error_updating_password">Error updating password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="unknown_user">Unknown user</string>
    <string name="incorrect_current_email">Incorrect current e-mail</string>
    <string name="account_deleted_successfully">Account deleted successfully</string>
    <string name="error_deleting_account">Error deleting account</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_change_password">I agree that I will not be able to change the password for 15 days.</string>
    <string name="notifications_enabled_title">Notifications activated!</string>
    <string name="notifications_enabled_text">You will receive useful reminders.</string>
    <string name="notification_title">Reminder</string>
    <string name="notification_reminder_1">Don\'t forget to train today.</string>
    <string name="notification_reminder_2">Take one step closer to your goal.</string>
    <string name="notification_reminder_3">You can do this!</string>
    <string name="banner_message_5">New update! Language and theme selector for the app.</string>
    <string name="banner_message_2">Tip: Use the app daily for better results.</string>
    <string name="banner_message_3">New update! Now the app will remember your login.</string>
    <string name="banner_message_4">Tip: Enable notifications so you don’t miss anything.</string>
    <string name="banner_message_1">New update! Introducing the banner with updates and tips.</string>
    <string name="banner_message_6">Tip: Explore all sections to make the most of it.</string>
    <string name="welcome_user">Welcome %1$s!</string>
    <string name="faq_question_1">How to improve my strength at the gym?</string>
    <string name="faq_answer_1">To improve strength, its important to follow a progressive program, get enough rest, and maintain a good diet.</string>
    <string name="faq_question_2">How often should I train?</string>
    <string name="faq_answer_2">It depends on your goal, but generally training 3 to 5 days a week is ideal for most people.</string>
    <string name="faq_question_3">How to avoid injuries?</string>
    <string name="faq_answer_3">Warm up properly, use correct technique, and avoid overloading weights.</string>
    <string name="faq_question_4">What to eat before and after training?</string>
    <string name="faq_answer_4">Before: light carbs and proteins. After: proteins and carbs for recovery.</string>
    <string name="faq_question_5">How long should I rest between sets?</string>
    <string name="faq_answer_5">Between 30 seconds and 2 minutes, depending on the type of training and your goals.</string>
    <string name="faq_question_6">Is it better to train in the morning or evening?</string>
    <string name="faq_answer_6">It depends on your schedule and preferences, both times can be effective if you are consistent.</string>
    <string name="faq_question_7">Do I need supplements to gain muscle?</string>
    <string name="faq_answer_7">Not mandatory, a balanced diet is usually enough, but some supplements can help.</string>
    <string name="faq_question_8">How can I track my progress?</string>
    <string name="faq_answer_8">Keep track of weights, repetitions, body measurements, and progress photos.</string>
    <string name="faq_question_9">Is warming up important?</string>
    <string name="faq_answer_9">Yes, it prepares your muscles and reduces injury risk.</string>
    <string name="faq_question_10">Which exercises are best for fat burning?</string>
    <string name="faq_answer_10">Cardio exercises combined with strength training are effective for fat loss.</string>
    <string name="faq_question_11">Should I train every day?</string>
    <string name="faq_answer_11">Its not recommended; the body needs time to recover. Ideally rest 1 or 2 days per week.</string>
    <string name="faq_question_12">How to avoid training plateaus?</string>
    <string name="faq_answer_12">Vary your exercises, increase intensity, and maintain good nutrition and rest.</string>
    <string name="faq_question_13">What clothes are recommended for training?</string>
    <string name="faq_answer_13">Comfortable, breathable clothes suitable for your exercise type.</string>
    <string name="faq_question_14">Is hydration important during exercise?</string>
    <string name="faq_answer_14">Yes, drinking water regularly helps maintain performance and prevents cramps.</string>
    <string name="faq_question_15">Can I lose fat without doing cardio?</string>
    <string name="faq_answer_15">Yes, combining a good diet with strength training works, although cardio speeds up the process.</string>
    <string name="stretching_routine">Stretching Routine</string>
    <string name="stretching_routine_text">Start your flexibility journey.</string>
    <string name="stretching_routine_next">New Routine</string>
    <string name="target_area">Target area:</string>
    <string name="reps">Reps:</string>
    <string name="weekly_challenge">- Weekly Challenge -</string>
    <string name="weekly_challenge_text">100 push-ups in 7 days</string>
    <string name="weekly_challenge_days_completed">0 of 7 days completed</string>
    <string name="day_complete">Mark day as done</string>
    <string name="weekly_challenge_chooser_btn">Choose weekly challenge</string>
    <string name="monthly_challenge">Monthly Challenge</string>
    <string name="monthly_challenge_text">1000 squats in 30 days</string>
    <string name="monthly_challenge_days_completed">0 of 30 days completed</string>
    <string name="monthly_challenge_chooser_btn">Choose monthly challenge</string>
    <string name="routine_day_text">Day</string>
    <string name="routine_day_progress">Progress:</string>
    <string name="routine_chronometer" translatable="false">00:00:00</string>
    <string name="routine_next_exercise">Next exercise</string>
    <string name="routine_start_btn">Start</string>
    <string name="routine_reset_btn">Reset</string>
    <string name="routine_cancel_btn">Cancel</string>
</resources>