<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/black"
        android:gravity="center" />

    <EditText
        android:id="@+id/currentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/confirmNewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_email_cancel"
            android:textColor="@color/white"
            android:backgroundTint="?attr/colorSecondary" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_email_confirm"
            android:textColor="@color/white"
            android:backgroundTint="@color/black" />
    </LinearLayout>

</LinearLayout>
