<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialogTitleChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/black"
        android:gravity="center" />

    <EditText
        android:id="@+id/currentPasswordChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textVisiblePassword"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:inputType="textVisiblePassword"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/checkboxConfirmChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_change_password"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelChangePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_email_cancel"
            android:textColor="@color/white"
            android:backgroundTint="?attr/colorSecondary" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnConfirmChangePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_email_confirm"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_black_tint_selector" />
    </LinearLayout>

</LinearLayout>
