<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:padding="24dp">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="14dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="18sp"
            android:paddingVertical="5dp"
            android:textStyle="bold"/>

        <Switch
            android:id="@+id/switch_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/language"
            style="@style/CustomTextInputLayout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/auto_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="none"
                android:padding="12dp"
                android:popupElevation="4dp"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/app_theme"
            style="@style/CustomTextInputLayout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/auto_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="none"
                android:padding="12dp"
                android:popupElevation="4dp"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="150dp"
            android:weightSum="2"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_support"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:paddingBottom="4dp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_help_support"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/help_button"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:backgroundTint="?attr/colorSecondary"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
