<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainMenuFragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/emailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/changeEmailButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/lapiz"
                android:backgroundTint="?attr/colorSecondary"
                android:background="@drawable/black_rounded_button"
                android:contentDescription="@string/change_password"
                android:scaleType="centerInside"
                android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="50dp">

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password_profile"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/changePasswordButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/lapiz"
                android:backgroundTint="?attr/colorSecondary"
                android:background="@drawable/black_rounded_button"
                android:contentDescription="@string/change_password"
                android:scaleType="centerInside"
                android:padding="8dp" />


        </LinearLayout>

        <TextView
            android:id="@+id/createdAtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_date"
            android:textSize="18sp"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btn_delete_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_acc_button"
                android:textAlignment="center"
                android:textSize="13sp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/delete_red" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
