<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_background"
    tools:context=".ResetPassActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/resetCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/account_Email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/baseline_alternate_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints=""
                android:inputType="textEmailAddress" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/send_email"
                android:id="@+id/sendEmail_Button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/yellow"
                app:cornerRadius = "10dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/back_button"
                android:id="@+id/backToLogin_Button"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/black"
                app:cornerRadius = "5dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>